--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.1",
     "node-fetch": "^3.0.0",
     "node-xlsx": "^0.17.1",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "ts-node": "^10.4.0",
     "typeorm": "^0.2.38"
