--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "node-xlsx": "^0.17.1",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
+    "rxjs": "^6.6.7",
     "ts-node": "^10.4.0",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
