--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/qs": "^6.9.7",
     "axios": "^0.24.0",
-    "class-transformer": "^0.4.0",
+    "class-transformer": "^0.2.3",
     "cron": "^1.8.2",
+    "crypto": "^1.0.1",
     "dotenv": "^14.2.0",
     "fs-extra": "^10.0.0",
     "isutf8": "^3.1.1",
@@ -24,6 +27,7 @@
     "node-xlsx": "^0.17.1",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
+    "qs": "^6.10.3",
     "rxjs": "^6.6.7",
     "ts-node": "^10.4.0",
     "typeorm": "^0.2.38",
