--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,20 +13,10 @@
             ],
             "program": "${workspaceFolder}\\index.ts"
         },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "main",
-            "env": {
-                "TS_NODE_TRANSPILE_ONLY": "true"
-            },
-            "runtimeArgs": [
-                "-r",
-                "ts-node/register"
-            ],
-            "args": [
-                "${workspaceFolder}/main.ts"
-            ]
-        }
+        { "type": "node", "request": "launch", "name": "main", "env": { "TS_NODE_TRANSPILE_ONLY": "true" }, "runtimeArgs": [ "-r", "ts-node/register" ], "args": [ "${workspaceFolder}/main.ts" ] },
+        { "type": "node", "request": "launch", "name": "moment", "env": { "TS_NODE_TRANSPILE_ONLY": "true" }, "runtimeArgs": [ "-r", "ts-node/register" ], "args": [ "${workspaceFolder}/src/moment/index.ts" ] },
+        { "type": "node", "request": "launch", "name": "HCPHCO", "env": { "TS_NODE_TRANSPILE_ONLY": "true" }, "runtimeArgs": [ "-r", "ts-node/register" ], "args": [ "${workspaceFolder}/src/hco_hcp/index.ts" ] },
+        { "type": "node", "request": "launch", "name": "Tree", "env": { "TS_NODE_TRANSPILE_ONLY": "true" }, "runtimeArgs": [ "-r", "ts-node/register" ], "args": [ "${workspaceFolder}/src/tree/index.ts" ] },
+        { "type": "node", "request": "launch", "name": "Tree", "env": { "TS_NODE_TRANSPILE_ONLY": "true" }, "runtimeArgs": [ "-r", "ts-node/register" ], "args": [ "${workspaceFolder}/src/tree/index.ts" ] },
     ]
 }
